Fix spacing on mobile ver

--- a/styles/queries.css
+++ b/styles/queries.css
@@ -417,10 +417,7 @@
   .intro-grid {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 2fr;
-    text-align: center;
-    column-gap: 0;
-    row-gap: 1.2rem;
-    margin-bottom: 0;
+    gap: 2.4rem;
   }
 
   .intro-img-1 {
@@ -463,6 +460,46 @@
   }
 }
 
+@media screen and (max-width: 440px) {
+  .hero {
+    grid-template-rows: 1fr 1.2fr;
+  }
+
+  .intro-grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1.2fr;
+  }
+
+  .collage {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1.2fr 0.8fr 0.8fr;
+    row-gap: 2.2rem;
+  }
+
+  .section-measurements {
+    grid-template-rows: 1.5fr 1fr;
+    row-gap: 2rem;
+  }
+
+  .contact-box {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    text-align: center;
+  }
+
+  footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    padding: 1.2rem 0.6rem;
+  }
+
+  .footer-text {
+    padding: 0;
+  }
+}
 /* 01 TYPOGRAPHY SYSTEM
 
 - FONT sizes (px)
